# syntheticdata-generation-catalog

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: add-algorithm.md  add-experiment-case.md  check-progress.md  create-scripts.md  run-all.md  run-task.md
.github/workflows/: deploy-pages.yml  pr-check.yml
docs/: evaluation-knowledge.md  spec-phase0.md
docs/catalog/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
docs/tasks/: 00-setup.md  01-data-preparation.md  02-phase1-single-table.md  03-phase2-multi-table.md  04-phase3-timeseries.md  05-evaluation.md  README.md  progress.json
libs/common/: experiment.py  migrate_run_logs.py
libs/evaluation/: aggregate_results.py  eval_fake_companies.py  eval_hotel.py  eval_imdb.py  eval_insurance.py  eval_iot_weather.py  eval_olist.py  eval_stock.py  extract_distribution_for_viz.py  extract_timeseries_for_viz.py  privacy_phase1.py  pyproject.toml  sdmetrics_phase1.py  tstr_phase1.py
libs/mostlyai/: pyproject.toml
libs/realtabformer/: pyproject.toml  run_olist.py
libs/sdv/: prepare_data.py  prepare_olist.py  pyproject.toml  run_additional_experiments.py  run_olist_hma.py  run_phase1.py  run_phase2.py  run_phase3.py
libs/synthcity/: pyproject.toml  run_phase1.py
libs/ydata/: pyproject.toml  run_phase1.py
results/evaluation/: all_results.json  summary.json
results/metadata/: manifest.json
results/phase1/: additional_run_log.json  fake_companies_eval.json  insurance_eval.json  privacy_eval.json  sdmetrics_eval.json  (+4 more)
(+86 files in other folders)
