[project]
name = "synth-evaluation"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "sdv>=1.0",
    "sdmetrics",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synth_evaluation"]
